# flint

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  flint  shell.nix
examples/: comments.ft  function_call.ft
include/: Flint.h  Scanner.h  Token.h
installer/: flint_installer.ps1
src/: Flint.cpp  Main.cpp  Scanner.cpp  Token.cpp  lexer.rs  lib.rs  main.cpp  main.rs  parser.rs  repl.rs  scanner.rs  token.rs
test/: main.ft  string_test.ft
tests/: integration_test.rs
